+fix: bug of view of card on mobile view

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -142,16 +142,16 @@
         height: 100vh;
         align-items: center;
         justify-content: center;
+        gap: 1rem;
     }
 
     .responsiveCard .card {
-        border: 7px solid red;
-    /*    border-radius: 18px;*/
-    /*    background-image: url("../img/waiting-carte.png") ;*/
+        border: 7px solid var(--dark-text-navbar-color);
+        border-radius: 18px;
+        background-image: url("../img/waiting-carte.png") ;
         height: 75px;
         width: 350px;
-    /*    gap: 10rem;*/
-    /*    transition: all .3s ease-in;*/
+        transition: all .3s ease-in;
     }
 
     .responsiveCard .cardContent {
@@ -161,13 +161,13 @@
 
     .responsiveCard .card .cardContent {
         display: none;
-    /*    flex-direction: column;*/
-    /*    color: var(--dark-text-navbar-color);*/
-    /*    !*background: red ;*!*/
-    /*    background: rgba(255, 255, 255, 0.08);*/
-    /*    background: linear-gradient(180deg,rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.33) 100%);*/
-    /*    backdrop-filter: blur(20px);*/
-    /*    border-radius:  0 0 45px 45px ;*/
+        flex-direction: column;
+        color: var(--dark-text-navbar-color);
+        /*background: red ;*/
+        background: rgba(255, 255, 255, 0.08);
+        background: linear-gradient(180deg,rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.33) 100%);
+        backdrop-filter: blur(20px);
+        border-radius:  0 0 45px 45px ;
     }
 
 }
